Changed vertical menu to horizontal and Fixed flexbox issues
The menu was overlapping with the flexbox i did for the home-page-main-content class. Changed it to where it won't. Also removed some unnecessary codes

--- a/style.css
+++ b/style.css
@@ -8,24 +8,25 @@
 .title {
     background-color: #f1f1f1;
     width: 100%;
-    position: fixed;
     z-index: 1;
     top: 0;
 }
 
 .menu {
-    margin-top: 80px;
+    margin-top: 40px;
 }
 
     .menu ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
-        width: 200px;
+        overflow: hidden;
         background-color: #f1f1f1;
-        position: fixed;
-        height: 100%;
-        overflow: auto;
+    }
+
+    /* .menu li allows us to make the menu bar horizontal */
+    .menu li {
+        float: left;
     }
 
     .menu li a {
@@ -44,19 +45,18 @@
         background-color: #555;
         color: white;
     }
-    
-    .menu li a:hover:not(.active) {
-        background-color: #555;
-        color: white;
+
+.home-page-main-content {
+    display: flex;
+    width: 100vw;
+}
+    .picture {
+        flex: 1;
+        background-color: none;
     }
 
-.main-content {
-    display: flex;
-}
 
-.main {
-    display: flex;
-    flex: 1;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 50px;
-}
+    .introduction {
+        flex: 1;
+        background-color: gray;
+    }
